@@ -8,11 +8,11 @@ use Chemistry::OpenSMILES::Writer qw(write_SMILES);
 use Test::More;
 
 my @cases = (
-    [ 'N[C@](Br)(O)C',    1, 1, 'N([C@@](Br)(O)(C))' ],
-    [ 'N[C@@](Br)(O)C',   1, 1, 'N([C@](Br)(O)(C))'  ],
-    [ 'N(C)(Br)(O)C',     0, 0, 'N(C)(Br)(O)(C)'     ],
-    [ 'N(C)(Br)(O)C',     0, 0, 'N(C)(Br)(O)(C)'     ],
-    [ 'N[C@AL1](Br)(O)C', 1, 0, 'N(C(Br)(O)(C))'     ],
+    [ 'N[C@](Br)(O)C',    1, 1, 'N([C@@](Br)(O)(C))'   ],
+    [ 'N[C@@](Br)(O)C',   1, 1, 'N([C@](Br)(O)(C))'    ],
+    [ 'N(C)(Br)(O)C',     0, 0, 'N(C)(Br)(O)(C)'       ],
+    [ 'N(C)(Br)(O)C',     0, 0, 'N(C)(Br)(O)(C)'       ],
+    [ 'N[C@AL1](Br)(O)C', 1, 0, 'N([C@AL1](Br)(O)(C))' ],
 );
 
 plan tests => 3 * scalar @cases;
